fix issue with megamenu on mobile

--- a/scss/pages/_microsite.scss
+++ b/scss/pages/_microsite.scss
@@ -662,6 +662,7 @@ aside#sideBar.ms-SideBar {
                 {
                     border:0;
                     color:#fff;
+                    padding-left:50px;
                 }
             }
             } 
